# Raft

./: README.md  Raft.proto
Raft/: CMakeLists.txt  External.hpp  Makefile  client.cpp  external.grpc.pb.cc  external.grpc.pb.h  external.pb.cc  external.pb.h  external.proto  frame  heartbeat.hpp  main.cpp  server.hpp  server_election.hpp  test_proto.grpc.pb.h  test_proto.pb.cc  test_proto.pb.h  test_proto.proto
Raft/Role/: Follower.hpp
test/: CMakeLists.txt  External.hpp  Makefile  client.cpp  client.hpp  client1.out  comprehensive_test.in  heartbeat.hpp  naive_test.in  server.cpp  server.hpp  test  test.cpp  test_proto.grpc.pb.cc  test_proto.pb.cc  test_proto.pb.h  test_proto.proto
test_grpc/: Makefile  pro.cc  test_client.cc  test_proto.proto  test_server.cc
